--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
             "@components/*": ["./src/components/*"],
             "@styles/*": ["./src/styles/*"],
             "@util/*": ["./src/util/*"],
-            "@/*": ["./*"]
+            "@screens/*": ["./src/screens/*"]
         }
     },
     "include": [
@@ -16,5 +16,5 @@
         "**/*.tsx",
         ".expo/types/**/*.ts",
         "expo-env.d.ts"
-    ]
+, "app/(tabs)/_layout.tsx"    ]
 }
