--- a/app.json
+++ b/app.json
@@ -27,7 +27,8 @@
             "favicon": "./assets/images/favicon.png"
         },
         "plugins": [
-            "expo-router"
+            "expo-router",
+            ["expo-location", { "locationAlwaysAndWhenInUsePermission": "$(PRODUCT_NAME) needs your location for posts." }]
         ],
         "experiments": {
             "typedRoutes": true
