Moved providers folder outside of components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
             "@assets/*": ["./src/assets/*"],
             "@api/*": ["./src/api/*"],
             "@components/*": ["./src/components/*"],
-            "@styles/*": ["./src/styles/*"],
+            "@providers/*": ["./src/providers/*"],
+            "@screens/*": ["./src/screens/*"],
             "@util/*": ["./src/util/*"],
-            "@screens/*": ["./src/screens/*"]
         }
     },
     "include": [
