--- a/app.json
+++ b/app.json
@@ -1,43 +1,49 @@
 {
-    "expo": {
-        "name": "universe",
-        "slug": "universe",
-        "version": "1.0.0",
-        "orientation": "portrait",
-        "icon": "./assets/images/icon.png",
-        "scheme": "myapp",
-        "userInterfaceStyle": "automatic",
-        "splash": {
-            "image": "./assets/images/splash.png",
-            "resizeMode": "contain",
-            "backgroundColor": "#ffffff"
-        },
-        "ios": {
-            "supportsTablet": true
-        },
-        "android": {
-            "adaptiveIcon": {
-                "foregroundImage": "./assets/images/adaptive-icon.png",
-                "backgroundColor": "#ffffff"
-            }
-        },
-        "web": {
-            "bundler": "metro",
-            "output": "static",
-            "favicon": "./assets/images/favicon.png"
-        },
-        "plugins": [
-            "expo-router",
-            ["expo-location", { "locationAlwaysAndWhenInUsePermission": "$(PRODUCT_NAME) needs your location for posts." }]
-        ],
-        "experiments": {
-            "typedRoutes": true
-        },
-        "fonts": [
-            {
-                "asset": "assets/fonts/SpaceMono-Regular.ttf",
-                "family": "SpaceMono"
-            }
-        ]
-    }
+  "expo": {
+    "name": "universe",
+    "slug": "universe",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/images/icon.png",
+    "scheme": "myapp",
+    "userInterfaceStyle": "automatic",
+    "splash": {
+      "image": "./assets/images/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "ios": {
+      "supportsTablet": true
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      }
+    },
+    "web": {
+      "bundler": "metro",
+      "output": "static",
+      "favicon": "./assets/images/favicon.png"
+    },
+    "plugins": [
+      "expo-router",
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "$(PRODUCT_NAME) needs your location for posts."
+        }
+      ],
+      "expo-font"
+    ],
+    "experiments": {
+      "typedRoutes": true
+    },
+    "fonts": [
+      {
+        "asset": "assets/fonts/SpaceMono-Regular.ttf",
+        "family": "SpaceMono"
+      }
+    ]
+  }
 }
