--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/cli": "^15.1.3",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
-    "expo": "^52.0.0",
+    "expo": "^52.0.25",
     "expo-av": "~15.0.2",
     "expo-constants": "~17.0.4",
     "expo-font": "~13.0.3",
@@ -36,6 +37,8 @@
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
     "fbemitter": "^3.0.0",
+    "metro": "^0.81.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.6",
