--- a/package.json
+++ b/package.json
@@ -44,9 +44,10 @@
     "react-native": "0.76.6",
     "react-native-clusterer": "^2.0.0",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "1.18.0",
+    "react-native-map-clustering": "^3.4.2",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.10",
     "zod": "^3.23.8"
@@ -57,6 +58,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-maps": "^0.24.1",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "react-test-renderer": "18.2.0",
