--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-native-community/cli": "^15.1.3",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
-    "expo": "^52.0.25",
+    "expo": "~52.0.26",
     "expo-av": "~15.0.2",
     "expo-constants": "~17.0.4",
     "expo-font": "~13.0.3",
@@ -30,9 +30,9 @@
     "expo-image-picker": "~16.0.4",
     "expo-linking": "~7.0.4",
     "expo-location": "~18.0.5",
-    "expo-router": "^4.0.16",
+    "expo-router": "~4.0.17",
     "expo-secure-store": "^14.0.1",
-    "expo-splash-screen": "~0.29.20",
+    "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
