--- a/app.json
+++ b/app.json
@@ -1,30 +1,36 @@
 {
   "expo": {
-    "name": "universe",
-    "slug": "universe",
+    "name": "UniVerse",
+    "slug": "UnVerse",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "app.joinuniverse",
+    "scheme": "gsdv-app-joinuniverse",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#f5f5f5"
+        "image": "./assets/images/splash.png",
+        "resizeMode": "contain",
+        "backgroundColor": "#f5f5f5"
     },
     "ios": {
-      "supportsTablet": true
+        "infoPlist": {
+            "CFBundleDisplayName": "UniVerse",
+            "NSPhotoLibraryUsageDescription": "\"UniVerse\" needs access your photo library to allow you to upload videos."
+        },
+        "supportsTablet": false,
+        "bundleIdentifier": "me.gsdv.UniVerse",
+        "buildNumber": "1.0.0"
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/splash.png",
-        "backgroundColor": "#ffffff"
-      }
+        "adaptiveIcon": {
+            "foregroundImage": "./assets/images/splash.png",
+            "backgroundColor": "#ffffff"
+        }
     },
     "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
+        "bundler": "metro",
+        "output": "static",
+        "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
       "expo-router",
