--- a/app.json
+++ b/app.json
@@ -1,36 +1,40 @@
 {
   "expo": {
     "name": "UniVerse",
-    "slug": "UnVerse",
+    "slug": "UniVerse",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "gsdv-app-joinuniverse",
     "userInterfaceStyle": "automatic",
     "splash": {
-        "image": "./assets/images/splash.png",
-        "resizeMode": "contain",
-        "backgroundColor": "#f5f5f5"
+      "image": "./assets/images/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#f5f5f5"
     },
     "ios": {
-        "infoPlist": {
-            "CFBundleDisplayName": "UniVerse",
-            "NSPhotoLibraryUsageDescription": "\"UniVerse\" needs access your photo library to allow you to upload videos."
-        },
-        "supportsTablet": false,
-        "bundleIdentifier": "me.gsdv.UniVerse",
-        "buildNumber": "1.0.0"
+      "infoPlist": {
+        "CFBundleDisplayName": "UniVerse",
+        "NSPhotoLibraryUsageDescription": "\"UniVerse\" needs access your photo library to allow you to upload videos."
+      },
+      "supportsTablet": false,
+      "bundleIdentifier": "me.gsdv.UniVerse",
+      "buildNumber": "1.0.0"
     },
     "android": {
-        "adaptiveIcon": {
-            "foregroundImage": "./assets/images/splash.png",
-            "backgroundColor": "#ffffff"
-        }
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/splash.png",
+        "backgroundColor": "#ffffff"
+      },
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ]
     },
     "web": {
-        "bundler": "metro",
-        "output": "static",
-        "favicon": "./assets/images/favicon.png"
+      "bundler": "metro",
+      "output": "static",
+      "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
       "expo-router",
@@ -51,6 +55,14 @@
         "family": "SpaceMono"
       }
     ],
-    "newArchEnabled": true
+    "newArchEnabled": true,
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "b8fbf108-0761-46eb-b6fb-ef8bf609f083"
+      }
+    }
   }
 }
