--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "expo-linking": "~7.0.4",
     "expo-location": "~18.0.5",
     "expo-router": "~4.0.17",
-    "expo-secure-store": "^14.0.1",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
@@ -39,31 +39,31 @@
     "fbemitter": "^3.0.0",
     "metro": "^0.81.0",
     "metro-react-native-babel-preset": "^0.77.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.76.6",
     "react-native-clusterer": "^2.0.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "~0.19.13",
     "zod": "^3.23.8",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.2",
     "@types/fbemitter": "^2.0.35",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
     "@types/react-native-maps": "^0.24.1",
     "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
+    "jest": "~29.7.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "^5.3.3"
   },
   "resolutions": {
     "react": "18.3.1",
