--- a/package.json
+++ b/package.json
@@ -16,38 +16,40 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@gorhom/bottom-sheet": "^5.0.6",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@gorhom/bottom-sheet": "5.1.0",
+    "@react-native-async-storage/async-storage": "2.1.1",
     "@react-native-community/cli": "^15.1.3",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
-    "expo": "~52.0.26",
+    "expo": "52.0.31",
     "expo-av": "~15.0.2",
     "expo-constants": "~17.0.5",
+    "expo-dev-client": "~5.0.11",
     "expo-font": "~13.0.3",
     "expo-image": "~2.0.4",
     "expo-image-manipulator": "~13.0.6",
-    "expo-image-picker": "~16.0.4",
-    "expo-linking": "~7.0.4",
+    "expo-image-picker": "16.0.5",
+    "expo-linking": "7.0.5",
     "expo-location": "~18.0.5",
     "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.7",
+    "expo-system-ui": "4.0.8",
+    "expo-updates": "~0.26.17",
     "expo-web-browser": "~14.0.2",
     "fbemitter": "^3.0.0",
-    "metro": "^0.81.0",
+    "metro": "^0.81.1",
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.6",
     "react-native-clusterer": "^3.0.0",
-    "react-native-gesture-handler": "^2.22.1",
+    "react-native-gesture-handler": "2.23.0",
     "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "^1.20.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^5.1.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "zod": "^3.23.8",
