--- a/app.json
+++ b/app.json
@@ -16,8 +16,8 @@
       "infoPlist": {
         "displayName": "UniVerse",
         "CFBundleDisplayName": "UniVerse",
-        "NSPhotoLibraryUsageDescription": "\"UniVerse\" would like to access your photo library to allow you to share photos and videos.",
-        "NSLocationWhenInUseUsageDescription": "\"UniVerse\" would like to access your location while using the app to allow you to interact with the map.",
+        "NSPhotoLibraryUsageDescription": "Allow access to photos to upload photos and videos from your library.",
+        "NSLocationWhenInUseUsageDescription": "Turning on location allows you to post on the map and view other map posts.",
         "ITSAppUsesNonExemptEncryption": false
       },
       "supportsTablet": false,
