Adding env url variable for dev builds

--- a/eas.json
+++ b/eas.json
@@ -6,7 +6,10 @@
   "build": {
     "development": {
       "developmentClient": false,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_DOMAIN": "https://joinuniverse.app"
+      }
     },
     "preview": {
       "distribution": "internal",
