--- a/app.json
+++ b/app.json
@@ -16,6 +16,7 @@
       "infoPlist": {
         "displayName": "UniVerse",
         "CFBundleDisplayName": "UniVerse",
+        "NSCameraUsageDescription": "Allow access to your camera to take photos and videos for your posts.",
         "NSPhotoLibraryUsageDescription": "Allow access to your photo library to share photos and videos in your posts.",
         "NSLocationWhenInUseUsageDescription": "Turning on location allows you to post on the map and view other map posts.",
         "ITSAppUsesNonExemptEncryption": false
