--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "react-native-svg": "^15.11.2",
     "react-native-web": "~0.19.13",
     "zod": "^3.23.8",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "expo-video": "~2.0.5",
+    "expo-video-thumbnails": "~9.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
