--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
         "**/*.ts",
         "**/*.tsx",
         ".expo/types/**/*.ts",
-        "expo-env.d.ts"
-, "app/(tabs)/_layout.tsx"    ]
+        "expo-env.d.ts",
+        "app/(tabs)/_layout.tsx"
+    ]
 }
